update German translation

--- a/src/main/resources/assets/camsbackpacks/lang/de_de.json
+++ b/src/main/resources/assets/camsbackpacks/lang/de_de.json
@@ -1,18 +1,20 @@
 {
-	"block.camsbackpacks.white_backpack": "Wei\u00dfer Rucksack",
-	"block.camsbackpacks.orange_backpack": "Oranger Rucksack",
-	"block.camsbackpacks.magenta_backpack": "Magenta Rucksack",
-	"block.camsbackpacks.light_blue_backpack": "Hellblauer Rucksack",
-	"block.camsbackpacks.yellow_backpack": "Gelber Rucksack",
-	"block.camsbackpacks.lime_backpack": "Hellgr\u00fcner Rucksack",
-	"block.camsbackpacks.pink_backpack": "Pinker Rucksack",
-	"block.camsbackpacks.gray_backpack": "Grauer Rucksack",
-	"block.camsbackpacks.light_gray_backpack": "Hellgrauer Rucksack",
-	"block.camsbackpacks.cyan_backpack": "T\u00fcrkiser Rucksack",
-	"block.camsbackpacks.purple_backpack": "Violetter Rucksack",
-	"block.camsbackpacks.blue_backpack": "Blauer Rucksack",
-	"block.camsbackpacks.brown_backpack": "Brauner Rucksack",
-	"block.camsbackpacks.green_backpack": "Gr\u00fcner Rucksack",
-	"block.camsbackpacks.red_backpack": "Roter Rucksack",
-	"block.camsbackpacks.black_backpack": "Schwarzer Rucksack"
+    "block.camsbackpacks.white_backpack":"Wei\u00dfer Rucksack",
+    "block.camsbackpacks.orange_backpack":"Oranger Rucksack",
+    "block.camsbackpacks.magenta_backpack":"Magenta Rucksack",
+    "block.camsbackpacks.light_blue_backpack":"Hellblauer Rucksack",
+    "block.camsbackpacks.yellow_backpack":"Gelber Rucksack",
+    "block.camsbackpacks.lime_backpack":"Hellgr\u00fcner Rucksack",
+    "block.camsbackpacks.pink_backpack":"Pinker Rucksack",
+    "block.camsbackpacks.gray_backpack":"Grauer Rucksack",
+    "block.camsbackpacks.light_gray_backpack":"Hellgrauer Rucksack",
+    "block.camsbackpacks.cyan_backpack":"T\u00fcrkiser Rucksack",
+    "block.camsbackpacks.purple_backpack":"Violetter Rucksack",
+    "block.camsbackpacks.blue_backpack":"Blauer Rucksack",
+    "block.camsbackpacks.brown_backpack":"Brauner Rucksack",
+    "block.camsbackpacks.green_backpack":"Gr\u00fcner Rucksack",
+    "block.camsbackpacks.red_backpack":"Roter Rucksack",
+    "block.camsbackpacks.black_backpack":"Schwarzer Rucksack",
+    "info.camsbackpacks.instructions":"1) Zieh deine Elytra/Brustplatte aus.\n2) Platziere den Rucksack auf dem Boden.\n3) Platziere deine Items im Rucksack.\n4) Dr\u00FCcke %s + %s w\u00E4hrend du auf den Rucksack schaust, um ihn anzuziehen.",
+    "info.camsbackpacks.more_info":"Dr\u00FCcke %s f\u00FCr mehr Informationen."
 }
