All that's left is trinkets support, yaaaaaay...

--- a/src/main/resources/assets/camsbackpacks/lang/en_us.json
+++ b/src/main/resources/assets/camsbackpacks/lang/en_us.json
@@ -25,5 +25,7 @@
 	"container.camsbackpacks.equip": "Equip",
 	"container.camsbackpacks.upequip": "Unequip",
 	"container.camsbackpacks.obstructed_block": "Block in front of player is obstructed!",
-	"container.camsbackpacks.cant_equip": "You're already wearing something on your back!"
+	"container.camsbackpacks.cant_equip": "You're already wearing something on your back!",
+	"container.camsbackpacks.player_inv": "Inventory",
+	"container.camsbackpacks.backpack_inv": "Backpack"
 }
