finished pride packs

--- a/src/main/resources/assets/camsbackpacks/lang/en_us.json
+++ b/src/main/resources/assets/camsbackpacks/lang/en_us.json
@@ -22,6 +22,7 @@
 	"block.camsbackpacks.red_backpack": "Red Backpack",
 	"block.camsbackpacks.black_backpack": "Black Backpack",
 	"block.camsbackpacks.gay_pride_backpack": "Gay Pride Backpack",
+	"block.camsbackpacks.lesbian_pride_backpack": "Lesbian Pride Backpack",
 	"block.camsbackpacks.qpoc_pride_backpack": "Queer People of Color Pride Backpack",
 	"block.camsbackpacks.bi_pride_backpack": "Bi Pride Backpack",
 	"block.camsbackpacks.pan_pride_backpack": "Pan Pride Backpack",
