--- a/src/main/resources/assets/camsbackpacks/lang/en_us.json
+++ b/src/main/resources/assets/camsbackpacks/lang/en_us.json
@@ -2,7 +2,7 @@
 	// Info
 	"info.camsbackpacks.instructions": "1) Take off Elytra/Chestplate.\n2) Place Backpack on ground.\n3) Place item(s) in Backpack.\n4) %s + %s on Backpack to put on back.",
 	"info.camsbackpacks.more_info": "Press %s for Instructions.",
-	"info.camsbackpacks.backpack_pos": "Backpack placed at",
+	"info.camsbackpacks.backpack_pos": "Backpack placed at [%s, %s, %s]",
 
 	// Blocks
 	"block.camsbackpacks.white_backpack": "White Backpack",
@@ -37,7 +37,7 @@
 
 	// Container stuff
 	"container.camsbackpacks.equip": "Equip",
-	"container.camsbackpacks.upequip": "Unequip",
+	"container.camsbackpacks.unequip": "Unequip",
 	"container.camsbackpacks.obstructed_block": "Block in front of player is obstructed!",
 	"container.camsbackpacks.cant_equip": "You're already wearing something on your back!",
 	"container.camsbackpacks.player_inv": "Inventory",
